--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ dmypy.json
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+/.idea/*
